--- a/GS4  final.ipynb
+++ b/GS4  final.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries\n",
+    "* pandas: For data manipulation and analysis.\n",
+    "* warnings: To suppress warnings during execution.\n",
+    "* BERTopic: For topic modeling.\n",
+    "* SentenceTransformer: For embedding sentences.\n",
+    "* ParameterGrid: For grid search over parameter combinations.\n",
+    "* KeyBERTInspired, MaximalMarginalRelevance, PartOfSpeech: For topic * representation in BERTopic.\n",
+    "* ClassTfidfTransformer: To implement c-TF-IDF vectorization.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,6 +29,13 @@
     "from bertopic.representation import KeyBERTInspired, MaximalMarginalRelevance, PartOfSpeech\n",
     "from bertopic.vectorizers import ClassTfidfTransformer\n",
     "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the Data from GS4.xlsx"
    ]
   },
   {
@@ -79,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing NLTK Libraries for Preprocessing the Questions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -124,6 +152,19 @@
     "nltk.download('averaged_perceptron_tagger_eng')\n",
     "import re\n",
     "import string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text Preprocessing \n",
+    "\n",
+    "Preprocessing included:\n",
+    "- Lowercasing text\n",
+    "- Removing stop words, including common question words (e.g., \"what\", \"explain\", \"why\")\n",
+    "- Lemmatization using POS tagging to reduce words to their base forms\n",
+    "- Removal of special characters and punctuation"
    ]
   },
   {
@@ -200,6 +241,45 @@
     "print(text)\n",
     "filtered_text = preprocess(text)\n",
     "print(filtered_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT Model \n",
+    "\n",
+    "The `bert_model` function performs topic modeling on a dataset of questions using the BERTopic framework. It tests various parameter combinations to find the configuration that results in the fewest unclassified (outlier) questions. The best model is saved when the number of outliers is minimized.\n",
+    "\n",
+    "The function extracts the list of questions from the DataFrame and preprocesses them\n",
+    "\n",
+    "### The function defines a parameter grid with various combinations for:\n",
+    "- n_gram_range: Ranges for creating n-grams (e.g., (1, 2), (1, 3), (1, 4)).\n",
+    "- questions: Either the original or lemmatized questions.\n",
+    "- embedding_model: Different transformer models for embedding the questions (e.g., 'all-mpnet-base-v2', 'all-MiniLM-L6-v2').\n",
+    "\n",
+    "### Grid Search:\n",
+    "- The function iterates over all combinations of parameters using ParameterGrid. For each combination:\n",
+    "    - It initializes a sentence transformer with the chosen embedding_model.\n",
+    "    - A ClassTfidfTransformer is used for BM25 weighting.\n",
+    "    - A BERTopic model is instantiated with various parameters, including:\n",
+    "    - Representation Models:\n",
+    "        - PartOfSpeech: Uses part-of-speech tagging.\n",
+    "        - MaximalMarginalRelevance: Ensures diversity in selected keywords.\n",
+    "        - KeyBERTInspired: Extracts the top 30 keywords for each topic\n",
+    "    - Other Parameters:\n",
+    "        - nr_topics: Sets the desired number of topics.\n",
+    "        - n_gram_range: Specifies the range of n-grams used in the model.\n",
+    "        - min_topic_size: Defines the minimum size for a topic.\n",
+    "\n",
+    "### Outliers and Topic Count Evaluation:\n",
+    "- After fitting the model, the function evaluates:\n",
+    "    - Unique Topics: If the number of unique topics is less than 5, the current configuration is skipped.\n",
+    "    - Outliers: The function counts how many questions are classified as outliers (topic -1) and tracks this for each parameter combination.\n",
+    "\n",
+    "### Output\n",
+    "- Model: The BERTopic model with the best parameter combination is saved to a file named gs4_model_v2.\n",
+    "- Outliers: The function prints the count of outliers for each parameter combination and the best outliers count found."
    ]
   },
   {
@@ -485,6 +565,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get topic details"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -623,6 +710,13 @@
    "outputs": [],
    "source": [
     "questions = df['Question'].values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate a visualization for the documents in the dataset."
    ]
   },
   {
@@ -2960,11 +3054,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Display representative documents for each topic."
+   ]
   },
   {
    "cell_type": "code",
@@ -3004,6 +3098,13 @@
    ],
    "source": [
     "model.get_representative_docs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract and display the top 10 words for each topic."
    ]
   },
   {
@@ -3060,6 +3161,13 @@
    ],
    "source": [
     "topics_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assign custom names to the topics based on their top words."
    ]
   },
   {
@@ -3166,6 +3274,13 @@
    ],
    "source": [
     "topics_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encode the questions and topics using SentenceTransformer embeddings for further similarity analysis."
    ]
   },
   {
@@ -16707,6 +16822,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use CrossEncoder to measure similarity between questions and topic words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -16925,6 +17047,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score_generate function evaluates how closely each question relates to the identified topics, generating scores for each topic based on the embeddings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -17140,6 +17269,13 @@
     "data['Topic'] = data.iloc[:,:-1].idxmin(axis=1)\n",
     "data['Year'] = df['Year']\n",
     "data.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The processed data is exported back to an Excel file"
    ]
   },
   {
