--- a/GS1_M2.ipynb
+++ b/GS1_M2.ipynb
@@ -372,56 +372,56 @@
     }
    ],
    "source": [
-    "# from sentence_transformers import SentenceTransformer\n",
-    "# from sklearn.model_selection import ParameterGrid\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.model_selection import ParameterGrid\n",
     "\n",
-    "# param_grid = {\n",
-    "#     'n_gram_range': [(1, 2), (1, 3)],\n",
-    "#     'questions': [lemmatized_questions],\n",
-    "#     'embedding_model': ['paraphrase-MiniLM-L6-v2','all-mpnet-base-v2','xlm-r-bert-base-nli-stsb-mean-tokens','distilbert-multilingual-nli-stsb-quora-ranking']\n",
+    "param_grid = {\n",
+    "    'n_gram_range': [(1, 2), (1, 3)],\n",
+    "    'questions': [lemmatized_questions],\n",
+    "    'embedding_model': ['paraphrase-MiniLM-L6-v2','all-mpnet-base-v2','xlm-r-bert-base-nli-stsb-mean-tokens','distilbert-multilingual-nli-stsb-quora-ranking']\n",
     "    \n",
-    "# }\n",
+    "}\n",
     "\n",
-    "# best_params = None\n",
-    "# best_outliers = float('inf')\n",
-    "# outliers_list = []\n",
+    "best_params = None\n",
+    "best_outliers = float('inf')\n",
+    "outliers_list = []\n",
     "\n",
-    "# from bertopic.representation import KeyBERTInspired\n",
-    "# from bertopic.representation import MaximalMarginalRelevance\n",
-    "# from bertopic.representation import PartOfSpeech\n",
+    "from bertopic.representation import KeyBERTInspired\n",
+    "from bertopic.representation import MaximalMarginalRelevance\n",
+    "from bertopic.representation import PartOfSpeech\n",
     "\n",
-    "# representation = [PartOfSpeech(\"en_core_web_sm\"),MaximalMarginalRelevance(diversity=0.2),KeyBERTInspired(top_n_words=30)]\n",
+    "representation = [PartOfSpeech(\"en_core_web_sm\"),MaximalMarginalRelevance(diversity=0.2),KeyBERTInspired(top_n_words=30)]\n",
     "\n",
     "\n",
-    "# from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "# from bertopic.vectorizers import ClassTfidfTransformer\n",
-    "# iteration = 1\n",
-    "# for params in ParameterGrid(param_grid):\n",
-    "#     print(iteration)\n",
-    "#     iteration += 1\n",
-    "#     sentence_model = SentenceTransformer(params['embedding_model'])\n",
-    "#     ctfidf_model = ClassTfidfTransformer(bm25_weighting=True,reduce_frequent_words=True)\n",
-    "#     vectorizer_model = CountVectorizer(stop_words=stop_words, ngram_range=params['n_gram_range'])\n",
-    "#     model = BERTopic(embedding_model=sentence_model,vectorizer_model=vectorizer_model,representation_model=representation,ctfidf_model=ctfidf_model,calculate_probabilities=True, nr_topics='6-10', min_topic_size=10,)\n",
-    "#     topics, probs = model.fit_transform(params['questions'])\n",
+    "from bertopic.vectorizers import ClassTfidfTransformer\n",
+    "iteration = 1\n",
+    "for params in ParameterGrid(param_grid):\n",
+    "    print(iteration)\n",
+    "    iteration += 1\n",
+    "    sentence_model = SentenceTransformer(params['embedding_model'])\n",
+    "    ctfidf_model = ClassTfidfTransformer(bm25_weighting=True,reduce_frequent_words=True)\n",
+    "    vectorizer_model = CountVectorizer(stop_words=stop_words, ngram_range=params['n_gram_range'])\n",
+    "    model = BERTopic(embedding_model=sentence_model,vectorizer_model=vectorizer_model,representation_model=representation,ctfidf_model=ctfidf_model,calculate_probabilities=True, nr_topics='6-10', min_topic_size=10,)\n",
+    "    topics, probs = model.fit_transform(params['questions'])\n",
     "    \n",
-    "#     unique_topics = len(set(topics)) - (1 if -1 in topics else 0)\n",
-    "#     if unique_topics < 4:\n",
-    "#         continue  # Skip this iteration if the number of topics is not greater than 4\n",
+    "    unique_topics = len(set(topics)) - (1 if -1 in topics else 0)\n",
+    "    if unique_topics < 4:\n",
+    "        continue  # Skip this iteration if the number of topics is not greater than 4\n",
     "      \n",
-    "#     outlier_count = sum(1 for topic in topics if topic == -1)\n",
-    "#     outliers_list.append(outlier_count)\n",
-    "#     print(f\"Outliers: {outlier_count} , Parameters: {params}\")\n",
+    "    outlier_count = sum(1 for topic in topics if topic == -1)\n",
+    "    outliers_list.append(outlier_count)\n",
+    "    print(f\"Outliers: {outlier_count} , Parameters: {params}\")\n",
     "    \n",
-    "#     if outlier_count < best_outliers:\n",
-    "#         best_params = params\n",
-    "#         best_outliers = outlier_count\n",
-    "#         model.save(\"best_model\")\n",
-    "#         print(f\"Best parameters: {best_params}, Best outliers: {best_outliers}\")\n",
-    "#         if best_outliers < 20:\n",
-    "#             model.get_topic_info()\n",
-    "#             break\n",
+    "    if outlier_count < best_outliers:\n",
+    "        best_params = params\n",
+    "        best_outliers = outlier_count\n",
+    "        model.save(\"best_model\")\n",
+    "        print(f\"Best parameters: {best_params}, Best outliers: {best_outliers}\")\n",
+    "        if best_outliers < 20:\n",
+    "            model.get_topic_info()\n",
+    "            break\n",
     "        \n",
     "    \n",
     "    \n",
