--- a/GS2.ipynb
+++ b/GS2.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries\n",
+    "* pandas: For data manipulation and analysis.\n",
+    "* warnings: To suppress warnings during execution.\n",
+    "* BERTopic: For topic modeling.\n",
+    "* SentenceTransformer: For embedding sentences.\n",
+    "* ParameterGrid: For grid search over parameter combinations.\n",
+    "* KeyBERTInspired, MaximalMarginalRelevance, PartOfSpeech: For topic * representation in BERTopic.\n",
+    "* ClassTfidfTransformer: To implement c-TF-IDF vectorization.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -19,6 +33,13 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the Data from GS2.xlsx"
    ]
   },
   {
